RxJS: Lab - Add progress-bar

--- a/rxjs-basics/code/index.html
+++ b/rxjs-basics/code/index.html
@@ -7,6 +7,47 @@
 
 <body>
   <h1>RxJS basics</h1>
+  <div class="progress-bar"></div>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tincidunt nunc. Donec ut sem luctus, laoreet turpis sed,
+    euismod diam. Nam blandit commodo tortor, eu rutrum lorem vestibulum a. Sed et eros mi. Vestibulum magna nulla, auctor
+    sit amet aliquam vitae, accumsan sit amet risus. Duis et leo et nulla convallis pellentesque eu et dui. Orci varius
+    natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse velit urna, hendrerit non diam
+    et, pellentesque gravida velit. Suspendisse sem urna, finibus vitae est quis, rutrum finibus risus. Curabitur tempus
+    placerat posuere. Integer elementum euismod vestibulum. Maecenas ac sollicitudin leo. Nam maximus sem sed blandit
+    auctor. Sed eu nibh mauris. Vestibulum et mauris vel nibh rhoncus sollicitudin quis sed arcu. Cras auctor ex eget erat
+    congue maximus.
+  </p>
+  <p>
+    Morbi id elit sit amet massa ultrices lobortis. Donec ullamcorper, dolor ac iaculis dapibus, tellus nunc porttitor erat,
+    ac eleifend mi purus ac dui. Mauris ac vulputate tortor, non dignissim ante. Pellentesque habitant morbi tristique
+    senectus et netus et malesuada fames ac turpis egestas. Integer feugiat augue a porta viverra. Proin nec elementum enim.
+    Maecenas lobortis ac turpis id elementum. Integer lobortis ipsum ipsum, a aliquam justo facilisis vel. Sed turpis metus,
+    ultrices et lacus ut, blandit faucibus turpis.
+  </p>
+  <p>
+    Fusce pellentesque est et enim mollis tempus. Pellentesque mollis accumsan sem eget efficitur. Aenean posuere, justo at
+    blandit porttitor, ipsum lectus lobortis dui, volutpat dignissim eros tortor ac nibh. Etiam lectus nisi, suscipit sed
+    iaculis at, sollicitudin id odio. Mauris convallis, felis quis mollis euismod, turpis ante finibus velit, nec accumsan
+    sapien leo vitae nunc. Nulla molestie, nulla at euismod eleifend, sem arcu vulputate purus, in vestibulum velit justo
+    convallis mauris. Mauris lorem est, facilisis semper augue at, dictum sollicitudin metus. Ut non neque in nunc varius
+    volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut accumsan ante neque, quis eleifend ex faucibus et.
+    Nulla id interdum metus. Fusce fermentum et mi id vestibulum. Maecenas lacinia nisi vitae consectetur suscipit.
+  </p>
+  <p>
+    Suspendisse eget velit eget odio vulputate sagittis sit amet eu massa. Vivamus ornare ante leo, in fermentum orci
+    laoreet ut. Nulla ac suscipit leo. In tristique, mi ut elementum ornare, tellus purus condimentum arcu, quis varius
+    metus justo eget elit. Nunc luctus erat at malesuada rhoncus. Quisque ante sem, semper nec quam vel, viverra hendrerit
+    sapien. Morbi placerat nisl et dolor auctor, vitae pharetra urna imperdiet. Pellentesque eget venenatis orci, eu
+    elementum massa. Nulla nec tempus urna, a scelerisque lorem.
+  </p>
+  <p>
+    Praesent tincidunt, odio ac bibendum ullamcorper, lorem ante imperdiet massa, eget sollicitudin augue urna sit amet
+    odio. Nullam a venenatis turpis. Etiam a dignissim erat. Etiam aliquam aliquet elementum. Sed tempus ipsum eu lectus
+    facilisis, id posuere augue ullamcorper. Mauris dapibus lacinia urna nec porttitor. Proin non scelerisque tellus. Sed
+    sit amet ipsum nisi. Duis vitae mi eget libero interdum varius quis eu nunc. Vestibulum in lorem malesuada, blandit est
+    sed, tincidunt erat.
+  </p>
   <script src="index.js"></script>
 </body>
 
