Setup vanilla Redux-like store in TypeScript

--- a/ngrx/uc-ngrx-vanilla-redux/index.html
+++ b/ngrx/uc-ngrx-vanilla-redux/index.html
@@ -1,9 +1,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Store</title>
+    <title>Vanilla Redux</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
     <div id="app">
       <p>You have <span></span> todos.</p>
       <input type="text">
@@ -11,6 +13,7 @@
       <ul class="todos"></ul>
       <button type="button" class="unsubscribe">Unsubscribe</button>
     </div>
+
     <script src="app.js"></script>
   </body>
 </html>
