--- a/workshops/sports-watcher-fe/src/index.html
+++ b/workshops/sports-watcher-fe/src/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SportsWatcherFe</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sports Watcher App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Pico.css -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
 </head>
 <body>
   <app-root></app-root>
